<resources>
    <string name="app_name">OctoCoffee</string>
    <string name="machine_access_pin">Machine Access Pin</string>
    <string name="accounting_id">Accounting-ID</string>
    <string name="mac_pin_hint">0000</string>
    <string name="accounting_id_hint">2210 Jim Bean</string>
    <string name="mac_pin_helper">You only need to enter the PIN if the machine requires</string>
    <string name="accounting_id_helper">The ID will be sent to the coffee machine.</string>
    <string name="app_id_helper">The ID will be sent to the coffee machine.</string>
    <string name="app_id">App-ID</string>
    <string name="app_id_hint">6a99636606fcabed</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="contact">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="payments">Payments</string>
    <string name="about_us">About Us</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="maps_search">Select near by coffee machine</string>
    <string name="title_activity_selected_maps">Map</string>
    <string name="payment_method">  Payment Method</string>
    <string name="confirm_coffee">Confirm Coffee</string>
    <string name="coffee_name">Coffee Name</string>
    <string name="machine_name">Machine Name</string>
    <string name="date">Date</string>
    <string name="price">Price (€)</string>
    <string name="orders">Orders</string>
    <string name="server_error">Server Error</string>
    <string name="no_internet"> Internet Connection is not Available </string>
    <string name="google_application_key">AIzaSyAyd90_9ihKyCAaum-7TrOKvw_ZRe9u0MU</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
