<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="me.prateeksaigal.ocotocoffee.SettingsActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_action_keyboard_backspace" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/settings"
            android:textColor="@color/settings_heading"
            android:textSize="@dimen/settings_txt_heading_size"
            android:textStyle="bold" />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SettingsTxtView"
            android:text="@string/machine_access_pin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/mac_pin"
            style="@style/SettingsEditTxt"
            android:hint="@string/mac_pin_hint"
            android:inputType="numberPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_pin_helper" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/SettingsTxtView"
            android:text="@string/accounting_id" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/accounting_id"
            style="@style/SettingsEditTxt"
            android:inputType="text"
            android:hint="@string/accounting_id_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounting_id_helper" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SettingsTxtView"
            android:text="@string/app_id" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_id_hint"
            android:textColor="@color/settings_txt_color"
            android:textSize="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_id_helper" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/cancel"
            style="@style/SettingsBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            style="@style/SettingsBtn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/save" />

    </RelativeLayout>


</LinearLayout>
