<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="me.prateeksaigal.ocotocoffee.ContactActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_action_keyboard_backspace" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/contact"
            android:textColor="@color/settings_heading"
            android:textSize="@dimen/settings_txt_heading_size"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/contact_white_bg"
        android:hint="@string/subject"
        android:padding="10dp"
        android:textAlignment="center"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/contact_txt_color" />


    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contact_white_bg"
        android:gravity="center_horizontal"
        android:hint="@string/message"
        android:minLines="7"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/send"
        style="@style/SettingsBtn"
        android:layout_gravity="center"
        android:text="@string/send" />


</LinearLayout>
